footer alignment issue fixed

--- a/nur-website/src/App.css
+++ b/nur-website/src/App.css
@@ -364,7 +364,6 @@ footer {
   justify-content: space-between;
   align-items: center; /* Vertically align elements */
   gap: 0.825rem;
-  height: 6.25rem;
   background-color: #D3E75B; /* Move background color to CSS */
   margin-bottom: 0; /* Remove any margin */
   margin-top: auto;
@@ -380,6 +379,8 @@ footer {
   background-color: #B894D0;
   border-radius: 40px;
   padding: 30px;
+  position:relative;
+  bottom:16px;
 
  
  
